data/forge_javadoc/1.7.10/processed/net_minecraft_world_gen_structure_StructureNetherBridgePieces.Straight.md
# StructureNetherBridgePieces.Straight

**Inheritance:** java.lang.Object → net.minecraft.world.gen.structure.StructureComponent → net.minecraft.world.gen.structure.StructureNetherBridgePieces.Straight

## Class signature

```java
public static class StructureNetherBridgePieces.Straight extends StructureComponent
```

## Constructors

- `Straight()`
- `Straight(int p_i2044_1_, java.util.Random p_i2044_2_, StructureBoundingBox p_i2044_3_, int p_i2044_4_)`

## Methods

- `boolean addComponentParts(World p_74875_1_, java.util.Random p_74875_2_, StructureBoundingBox p_74875_3_)`
- `void buildComponent(StructureComponent p_74861_1_, java.util.List p_74861_2_, java.util.Random p_74861_3_)`
- `static StructureNetherBridgePieces.Straight createValidComponent(java.util.List p_74983_0_, java.util.Random p_74983_1_, int p_74983_2_, int p_74983_3_, int p_74983_4_, int p_74983_5_, int p_74983_6_)`
- `protected void func_143011_b(NBTTagCompound p_143011_1_)`
- `protected void func_143012_a(NBTTagCompound p_143012_1_)`
- `protected StructureComponent getNextComponentNormal(StructureNetherBridgePieces.Start p_74963_1_, java.util.List p_74963_2_, java.util.Random p_74963_3_, int p_74963_4_, int p_74963_5_, boolean p_74963_6_)`
- `protected StructureComponent getNextComponentX(StructureNetherBridgePieces.Start p_74961_1_, java.util.List p_74961_2_, java.util.Random p_74961_3_, int p_74961_4_, int p_74961_5_, boolean p_74961_6_)`
- `protected StructureComponent getNextComponentZ(StructureNetherBridgePieces.Start p_74965_1_, java.util.List p_74965_2_, java.util.Random p_74965_3_, int p_74965_4_, int p_74965_5_, boolean p_74965_6_)`
- `protected static boolean isAboveGround(StructureBoundingBox p_74964_0_)`

## Fields

- `protected static WeightedRandomChestContent [] field_111019_a`